--- a/assets/css/assets/global/blocks/blocks.css
+++ b/assets/css/assets/global/blocks/blocks.css
@@ -100,6 +100,7 @@
 /* Font-colors */
 /* Search-form */
 /* Links */
+/* Borders */
 /* Alerts and Notifications */
 /* Borders */
 /* Search form */
