--- a/assets/scss/assets/typography/font-colors.scss
+++ b/assets/scss/assets/typography/font-colors.scss
@@ -6,10 +6,14 @@ $font-color_bold: #19202C;
 $font-color_main: #C2C2C2;
 $font-color_in-notification: #ffffff;
 
-
 /* Search-form */
 $font-color__search-placeholder: #30384C;
 
 /* Links */
 $font-color__navigation-link: #898989;
 $font-color__navigation-link_active: #FF0000;
+
+/* Borders */
+$border-color__default: #000000;
+$border-color__active: #FF0000;
+
