--- a/assets/css/assets/blocks/main_home-page/recommended-content/recommended-content.css
+++ b/assets/css/assets/blocks/main_home-page/recommended-content/recommended-content.css
@@ -1,6 +1,7 @@
 /* Font-colors */
 /* Search-form */
 /* Links */
+/* Borders */
 /* Importing font: Muli - 300 / 400 / 700 / 800
    Adobe Fonts https://fonts.adobe.com/my_fonts#web_projects-section
 */
@@ -8,6 +9,7 @@
 /* Font-colors */
 /* Search-form */
 /* Links */
+/* Borders */
 * {
   font-family: "Muli", sans-serif;
   color: #C2C2C2;
