--- a/assets/css/assets/global/global.css
+++ b/assets/css/assets/global/global.css
@@ -101,6 +101,7 @@
 /* Font-colors */
 /* Search-form */
 /* Links */
+/* Borders */
 /* Alerts and Notifications */
 /* Borders */
 /* Search form */
