--- a/assets/scss/assets/blocks/main_channel-page/main_channel-page.scss
+++ b/assets/scss/assets/blocks/main_channel-page/main_channel-page.scss
@@ -15,7 +15,7 @@
       display: flex;
       height: auto;
       width: auto;
-      margin: 0 0 2.4rem 0;
+      margin: 0 0 2rem 0;
       .author-block__text{
         padding: 0 0 0 1.4rem;
         display: inline-flex;
@@ -34,10 +34,18 @@
         line-height: 1.5;
         color: $font-color_black;
         margin: 0 6.2rem 0 0;
-        &:last-child {
-          background-image: url("../img/header/search-form/lens.svg");
+        &::before {
+          display: block;
+          content: '';
+          font-weight: bold;
+          height: 0;
+          overflow: hidden;
+          visibility: hidden;
         }
-
+        img {
+          width: 1.8rem;
+          height: 1.8rem;
+        }
         &:hover,
         &:active {
           border-bottom: 2px solid $font_color__active;
@@ -54,6 +62,42 @@
       .video-content__subscription-stat {
         margin: 0 0 0 2rem;
         position: unset;
+      }
+    }
+  }
+}
+
+ul {
+  display: flex;
+  text-decoration: none;
+  padding: 0;
+
+  li {
+    height: 2.8rem;
+    display: inline-block;
+    text-decoration: none;
+    margin-right: 6rem;
+    font-size: 0;
+    &:hover {
+      a {
+        color: $font-color__navigation-link_active;
+        font-weight: bold;
+        border-bottom: 2px solid $border-color__active;
+        border-radius: 2px;
+      }
+    }
+    a {
+      display: inline-block;
+      text-align: center;
+      font-size: 1.8rem;
+      padding: 0 0.45rem 0.45rem;
+      &::before {
+        display: block;
+        content: attr(title);
+        font-weight: bold;
+        height: 0;
+        overflow: hidden;
+        visibility: hidden;
       }
     }
   }
