--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -677,32 +677,44 @@ header .container .header__user-block .header__user-block__user-profile img {
   flex-direction: column;
   justify-content: center;
 }
-.channel__content .channel__author-info .channel__navigation .navigation__elem {
-  width: auto;
-  display: inline-block;
-  font-size: 1.8rem;
-  padding: 0 0.5rem;
-  border-radius: 2px;
-  line-height: 1.5;
-  color: #000000;
-  margin: 0 6.2rem 0 0;
+.channel__content .channel__author-info .channel__navigation ul {
+  display: flex;
+  text-decoration: none;
+  padding: 0;
 }
-.channel__content .channel__author-info .channel__navigation .navigation__elem::before {
+.channel__content .channel__author-info .channel__navigation ul li {
+  height: 2.8rem;
+  display: inline-block;
+  text-decoration: none;
+  margin-right: 5.8rem;
+  font-size: 0;
+}
+.channel__content .channel__author-info .channel__navigation ul li:last-child a {
+  height: 2.7rem;
+  width: 2.9rem;
+}
+.channel__content .channel__author-info .channel__navigation ul li:hover a {
+  color: #FF0000;
+  font-weight: bold;
+  border-bottom: 2px solid #FF0000;
+  border-radius: 2px;
+}
+.channel__content .channel__author-info .channel__navigation ul li:hover a svg > path {
+  fill: #FF0000;
+}
+.channel__content .channel__author-info .channel__navigation ul li a {
+  display: inline-block;
+  text-align: center;
+  font-size: 1.8rem;
+  padding: 0 0.45rem 0.45rem;
+}
+.channel__content .channel__author-info .channel__navigation ul li a::before {
   display: block;
-  content: "";
+  content: attr(title);
   font-weight: bold;
   height: 0;
   overflow: hidden;
   visibility: hidden;
-}
-.channel__content .channel__author-info .channel__navigation .navigation__elem img {
-  width: 1.8rem;
-  height: 1.8rem;
-}
-.channel__content .channel__author-info .channel__navigation .navigation__elem:hover, .channel__content .channel__author-info .channel__navigation .navigation__elem:active {
-  border-bottom: 2px solid #FF0000;
-  font-weight: 700;
-  color: #FF0000;
 }
 .channel__content .channel__author-info .video-content__navigation {
   padding: 0;
@@ -713,39 +725,6 @@ header .container .header__user-block .header__user-block__user-profile img {
 .channel__content .channel__author-info .video-content__navigation .video-content__subscription-stat {
   margin: 0 0 0 2rem;
   position: unset;
-}
-
-ul {
-  display: flex;
-  text-decoration: none;
-  padding: 0;
-}
-ul li {
-  height: 2.8rem;
-  display: inline-block;
-  text-decoration: none;
-  margin-right: 6rem;
-  font-size: 0;
-}
-ul li:hover a {
-  color: #FF0000;
-  font-weight: bold;
-  border-bottom: 2px solid #FF0000;
-  border-radius: 2px;
-}
-ul li a {
-  display: inline-block;
-  text-align: center;
-  font-size: 1.8rem;
-  padding: 0 0.45rem 0.45rem;
-}
-ul li a::before {
-  display: block;
-  content: attr(title);
-  font-weight: bold;
-  height: 0;
-  overflow: hidden;
-  visibility: hidden;
 }
 
 /* Font-colors */
