Make current video block

--- a/assets/css/assets/blocks/blocks.css
+++ b/assets/css/assets/blocks/blocks.css
@@ -247,6 +247,33 @@ header .container .header__user-block .header__user-block__user-profile img {
   flex-direction: column;
   justify-content: center;
 }
+.channel__content .channel__author-info .author-content__block .recommended__channels {
+  width: 22rem;
+  margin-left: auto;
+}
+.channel__content .channel__author-info .author-content__block .subscriptions {
+  padding: 0;
+}
+.channel__content .channel__author-info .author-content__block .subscriptions h4 {
+  margin: 1rem 0 3rem 0;
+  height: 2.8rem;
+  display: inline-flex;
+  align-items: end;
+  font-weight: normal;
+  color: #C2C2C2;
+}
+.channel__content .channel__author-info .author-content__block .subscriptions .subscriptions__list .subscriptions__link {
+  margin-bottom: 3rem;
+}
+.channel__content .channel__author-info .author-content__block .subscriptions .subscriptions__list .subscriptions__link .subscriptions__link__icon img {
+  width: 5rem;
+  height: auto;
+  margin-right: 2rem;
+}
+.channel__content .channel__author-info .author-content__block .subscriptions .subscriptions__list .subscriptions__link .subscriptions__link__text {
+  font-size: 1.8rem;
+  color: #19202C;
+}
 .channel__content .channel__author-info .channel__navigation ul {
   display: flex;
   text-decoration: none;
@@ -286,6 +313,27 @@ header .container .header__user-block .header__user-block__user-profile img {
   overflow: hidden;
   visibility: hidden;
 }
+.channel__content .channel__author-info .author-current-video__block {
+  padding: 4.4rem 0 0 0;
+  width: 100%;
+}
+.channel__content .channel__author-info .author-current-video__block .current-video__description {
+  padding: 2rem 0 1rem 3.2rem;
+  max-width: 58.2rem;
+}
+.channel__content .channel__author-info .author-current-video__block .current-video__description h1 {
+  margin-bottom: 1rem;
+  max-width: 43rem;
+}
+.channel__content .channel__author-info .author-current-video__block .current-video__description p {
+  margin-bottom: 3rem;
+  line-height: 2.2rem;
+  color: #666666;
+}
+.channel__content .channel__author-info .author-current-video__block .current-video__description .content_data p {
+  margin: 0;
+  font-size: 1.6rem;
+}
 .channel__content .channel__author-info .video-content__navigation {
   padding: 0;
   margin: 0 0 0 auto;
@@ -314,10 +362,11 @@ header .container .header__user-block .header__user-block__user-profile img {
   font-weight: 400;
 }
 
-h1, h2, h3, h4 {
+h1, h2, h3, h4, h5 {
   color: #19202C;
   font-weight: 700;
   margin: 0;
+  line-height: 3.4rem;
 }
 
 h1, h2 {
@@ -328,7 +377,7 @@ h3 {
   font-size: 1.8rem;
 }
 
-h4 {
+h4, h5 {
   font-size: 1.6rem;
 }
 
@@ -337,6 +386,7 @@ input::placeholder {
   font-size: 1.6rem;
   text-decoration: none;
   margin: 0;
+  line-height: 2.2rem;
 }
 
 .subscribed-author {
@@ -381,10 +431,11 @@ input::placeholder {
   font-weight: 400;
 }
 
-h1, h2, h3, h4 {
+h1, h2, h3, h4, h5 {
   color: #19202C;
   font-weight: 700;
   margin: 0;
+  line-height: 3.4rem;
 }
 
 h1, h2 {
@@ -395,7 +446,7 @@ h3 {
   font-size: 1.8rem;
 }
 
-h4 {
+h4, h5 {
   font-size: 1.6rem;
 }
 
@@ -404,6 +455,7 @@ input::placeholder {
   font-size: 1.6rem;
   text-decoration: none;
   margin: 0;
+  line-height: 2.2rem;
 }
 
 @media (max-width: 320px) {
@@ -458,10 +510,11 @@ main {
   font-weight: 400;
 }
 
-h1, h2, h3, h4 {
+h1, h2, h3, h4, h5 {
   color: #19202C;
   font-weight: 700;
   margin: 0;
+  line-height: 3.4rem;
 }
 
 h1, h2 {
@@ -472,7 +525,7 @@ h3 {
   font-size: 1.8rem;
 }
 
-h4 {
+h4, h5 {
   font-size: 1.6rem;
 }
 
@@ -481,6 +534,7 @@ input::placeholder {
   font-size: 1.6rem;
   text-decoration: none;
   margin: 0;
+  line-height: 2.2rem;
 }
 
 .nav-menu {
@@ -575,10 +629,11 @@ input::placeholder {
   font-weight: 400;
 }
 
-h1, h2, h3, h4 {
+h1, h2, h3, h4, h5 {
   color: #19202C;
   font-weight: 700;
   margin: 0;
+  line-height: 3.4rem;
 }
 
 h1, h2 {
@@ -589,7 +644,7 @@ h3 {
   font-size: 1.8rem;
 }
 
-h4 {
+h4, h5 {
   font-size: 1.6rem;
 }
 
@@ -598,6 +653,7 @@ input::placeholder {
   font-size: 1.6rem;
   text-decoration: none;
   margin: 0;
+  line-height: 2.2rem;
 }
 
 .subscriptions {
