--- a/assets/css/assets/blocks/main_channel-page/main_channel-page.css
+++ b/assets/css/assets/blocks/main_channel-page/main_channel-page.css
@@ -24,6 +24,33 @@
   flex-direction: column;
   justify-content: center;
 }
+.channel__content .channel__author-info .author-content__block .recommended__channels {
+  width: 22rem;
+  margin-left: auto;
+}
+.channel__content .channel__author-info .author-content__block .subscriptions {
+  padding: 0;
+}
+.channel__content .channel__author-info .author-content__block .subscriptions h4 {
+  margin: 1rem 0 3rem 0;
+  height: 2.8rem;
+  display: inline-flex;
+  align-items: end;
+  font-weight: normal;
+  color: #C2C2C2;
+}
+.channel__content .channel__author-info .author-content__block .subscriptions .subscriptions__list .subscriptions__link {
+  margin-bottom: 3rem;
+}
+.channel__content .channel__author-info .author-content__block .subscriptions .subscriptions__list .subscriptions__link .subscriptions__link__icon img {
+  width: 5rem;
+  height: auto;
+  margin-right: 2rem;
+}
+.channel__content .channel__author-info .author-content__block .subscriptions .subscriptions__list .subscriptions__link .subscriptions__link__text {
+  font-size: 1.8rem;
+  color: #19202C;
+}
 .channel__content .channel__author-info .channel__navigation ul {
   display: flex;
   text-decoration: none;
@@ -62,6 +89,27 @@
   height: 0;
   overflow: hidden;
   visibility: hidden;
+}
+.channel__content .channel__author-info .author-current-video__block {
+  padding: 4.4rem 0 0 0;
+  width: 100%;
+}
+.channel__content .channel__author-info .author-current-video__block .current-video__description {
+  padding: 2rem 0 1rem 3.2rem;
+  max-width: 58.2rem;
+}
+.channel__content .channel__author-info .author-current-video__block .current-video__description h1 {
+  margin-bottom: 1rem;
+  max-width: 43rem;
+}
+.channel__content .channel__author-info .author-current-video__block .current-video__description p {
+  margin-bottom: 3rem;
+  line-height: 2.2rem;
+  color: #666666;
+}
+.channel__content .channel__author-info .author-current-video__block .current-video__description .content_data p {
+  margin: 0;
+  font-size: 1.6rem;
 }
 .channel__content .channel__author-info .video-content__navigation {
   padding: 0;
