--- a/assets/scss/assets/typography/font-colors.scss
+++ b/assets/scss/assets/typography/font-colors.scss
@@ -3,6 +3,7 @@
 $font_color__active: #FF0000;
 $font-color_black: #000000;
 $font-color_bold: #19202C;
+$font-color_main-dark: #666666;
 $font-color_main: #C2C2C2;
 $font-color_in-notification: #ffffff;
 
