--- a/assets/css/assets/blocks/main_home-page/main_home-page.css
+++ b/assets/css/assets/blocks/main_home-page/main_home-page.css
@@ -17,10 +17,11 @@
   font-weight: 400;
 }
 
-h1, h2, h3, h4 {
+h1, h2, h3, h4, h5 {
   color: #19202C;
   font-weight: 700;
   margin: 0;
+  line-height: 3.4rem;
 }
 
 h1, h2 {
@@ -31,7 +32,7 @@ h3 {
   font-size: 1.8rem;
 }
 
-h4 {
+h4, h5 {
   font-size: 1.6rem;
 }
 
@@ -40,6 +41,7 @@ input::placeholder {
   font-size: 1.6rem;
   text-decoration: none;
   margin: 0;
+  line-height: 2.2rem;
 }
 
 .subscribed-author {
@@ -84,10 +86,11 @@ input::placeholder {
   font-weight: 400;
 }
 
-h1, h2, h3, h4 {
+h1, h2, h3, h4, h5 {
   color: #19202C;
   font-weight: 700;
   margin: 0;
+  line-height: 3.4rem;
 }
 
 h1, h2 {
@@ -98,7 +101,7 @@ h3 {
   font-size: 1.8rem;
 }
 
-h4 {
+h4, h5 {
   font-size: 1.6rem;
 }
 
@@ -107,6 +110,7 @@ input::placeholder {
   font-size: 1.6rem;
   text-decoration: none;
   margin: 0;
+  line-height: 2.2rem;
 }
 
 @media (max-width: 320px) {
