--- a/assets/css/assets/blocks/main_channel-page/main_channel-page.css
+++ b/assets/css/assets/blocks/main_channel-page/main_channel-page.css
@@ -5,7 +5,7 @@
 .channel__content {
   padding: 1rem 7rem 0 0;
 }
-.channel__content .channel__author-info .channel__cover {
+.channel__content .channel__cover {
   height: 28rem;
   width: 100%;
   border-radius: 1.4rem;
@@ -23,6 +23,9 @@
   display: inline-flex;
   flex-direction: column;
   justify-content: center;
+}
+.channel__content .channel__author-info .author-content__block {
+  margin-bottom: 3rem;
 }
 .channel__content .channel__author-info .author-content__block .recommended__channels {
   width: 22rem;
