--- a/assets/scss/assets/blocks/main_channel-page/main_channel-page.scss
+++ b/assets/scss/assets/blocks/main_channel-page/main_channel-page.scss
@@ -3,13 +3,13 @@
 
 .channel__content {
   padding: 1rem 7rem 0 0;
+  .channel__cover {
+    height: 28rem;
+    width: 100%;
+    border-radius: 1.4rem;
+    background-color: #898989;
+  }
   .channel__author-info {
-    .channel__cover {
-      height: 28rem;
-      width: 100%;
-      border-radius: 1.4rem;
-      background-color: #898989;
-    }
     .channel__author__description {
       padding: 3rem 0 0 0;
       display: flex;
@@ -24,6 +24,7 @@
       }
     }
     .author-content__block {
+      margin-bottom: 3rem;
       .recommended__channels {
         width: 22rem;
         margin-left: auto;
