--- a/assets/scss/assets/blocks/subscriptions/subscriptions.scss
+++ b/assets/scss/assets/blocks/subscriptions/subscriptions.scss
@@ -28,9 +28,11 @@
         }
       }
       .subscriptions__link__text {
-        color: $font-color__navigation-link
+        color: $font-color__navigation-link;
+        @media (max-width: $xl) {
+          line-height: 1.5;
+        }
       }
-
     }
   }
 
