--- a/assets/scss/assets/global/breakpoints/breakpoints.scss
+++ b/assets/scss/assets/global/breakpoints/breakpoints.scss
@@ -1,6 +1,7 @@
-$xs: 320px;
+$xs: 390px;
 $sm: 576px;
-$md: 768px;
-$lg: 992px;
+$md: 838px;
+$lg: 1050px;
 $xl: 1200px;
-$xxl: 1400px
+$xxl: 1400px;
+$xxll: 1530px;
