--- a/assets/css/assets/blocks/blocks.css
+++ b/assets/css/assets/blocks/blocks.css
@@ -10,7 +10,7 @@
   background-color: white;
   z-index: 10;
 }
-@media (max-width: 320px) {
+@media (max-width: 838px) {
   .container aside {
     width: 100%;
     border-top: 1px solid #f1f1f1;
@@ -40,7 +40,7 @@ header {
   height: 8.4rem;
   width: 100%;
 }
-@media (max-width: 320px) {
+@media (max-width: 576px) {
   header {
     padding: 0 1.2rem;
     z-index: 100;
@@ -53,18 +53,17 @@ header .container {
   display: flex;
   align-items: center;
 }
-@media (max-width: 768px) {
+@media (max-width: 838px) {
   header .container {
-    padding: 0 1.6rem;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    padding: 0 1.8rem;
   }
 }
 @media (max-width: 576px) {
   header .container {
     height: 5rem;
-    width: 28.8rem;
-    padding: 0;
-    display: flex;
-    align-items: center;
   }
 }
 header .container .header__burger-menu > div {
@@ -95,7 +94,7 @@ header .container .header__search-form {
   margin: 0 4rem 0 6rem;
   border-radius: 2.2rem;
 }
-@media (max-width: 768px) {
+@media (max-width: 838px) {
   header .container .header__search-form {
     margin: 0 4rem;
   }
@@ -159,7 +158,10 @@ header .container .header__user-block {
   justify-content: space-between;
   margin-left: auto;
 }
-@media (max-width: 768px) {
+header .container .header__user-block a:not(:last-child):hover img, header .container .header__user-block a:not(:last-child):active img {
+  filter: invert(100%) sepia(84%) saturate(6649%) hue-rotate(6deg) brightness(105%) contrast(117%);
+}
+@media (max-width: 838px) {
   header .container .header__user-block {
     width: auto;
   }
@@ -200,6 +202,7 @@ header .container .header__user-block .header__user-block__notifications .notifi
   text-align: center;
   padding: 0.25rem;
   font-weight: 800;
+  line-height: 1.2;
 }
 header .container .header__user-block .header__user-block__user-profile {
   display: inline-block;
@@ -225,21 +228,194 @@ header .container .header__user-block .header__user-block__user-profile img {
 /* Search-form */
 /* Links */
 /* Borders */
+/* Font-colors */
+/* Search-form */
+/* Links */
+/* Borders */
+.author-current-video__block {
+  padding: 4.4rem 0 0 0;
+  width: 100%;
+}
+@media (max-width: 1530px) {
+  .author-current-video__block {
+    flex-direction: column;
+    margin: 0;
+  }
+}
+@media (max-width: 576px) {
+  .author-current-video__block {
+    display: none;
+  }
+}
+@media (max-width: 1050px) {
+  .author-current-video__block .content__tab > .video-content {
+    margin: 0 auto;
+  }
+}
+.author-current-video__block .current-video__description {
+  margin: 0 3.2rem;
+  padding: 2rem 0 1rem 0;
+  max-width: 58.2rem;
+}
+@media (max-width: 1530px) {
+  .author-current-video__block .current-video__description {
+    margin: 0;
+  }
+  .author-current-video__block .current-video__description h1 {
+    max-width: 54rem;
+  }
+}
+@media (max-width: 1050px) {
+  .author-current-video__block .current-video__description {
+    margin: 0 auto;
+    padding: 2rem 2.1rem 1rem;
+  }
+}
+.author-current-video__block .current-video__description h1 {
+  margin-bottom: 1rem;
+  max-width: 43rem;
+}
+.author-current-video__block .current-video__description p {
+  margin-bottom: 3rem;
+  line-height: 2.2rem;
+  color: #666666;
+}
+.author-current-video__block .current-video__description .content_data p {
+  margin: 0;
+  font-size: 1.6rem;
+}
+
+/* Font-colors */
+/* Search-form */
+/* Links */
+/* Borders */
+@media (max-width: 576px) {
+  .channel__navigation {
+    margin: 0;
+  }
+}
+.channel__navigation ul {
+  display: flex;
+  text-decoration: none;
+  padding: 0;
+}
+.channel__navigation ul li {
+  height: 2.8rem;
+  display: inline-block;
+  text-decoration: none;
+  margin-right: 5.8rem;
+  font-size: 0;
+}
+.channel__navigation ul li:last-child a {
+  height: 2.7rem;
+  width: 2.9rem;
+}
+.channel__navigation ul li:hover a {
+  color: #FF0000;
+  font-weight: bold;
+  border-bottom: 2px solid #FF0000;
+  border-radius: 2px;
+}
+.channel__navigation ul li:hover a svg > path {
+  fill: #FF0000;
+}
+.channel__navigation ul li a {
+  display: inline-block;
+  text-align: center;
+  font-size: 1.8rem;
+  padding: 0 0.45rem 0.45rem;
+  color: #000000;
+}
+.channel__navigation ul li a::before {
+  display: block;
+  content: attr(title);
+  font-weight: bold;
+  height: 0;
+  overflow: hidden;
+  visibility: hidden;
+}
+.channel__navigation ul .mobile-dropdown {
+  display: none;
+}
+@media (max-width: 576px) {
+  .channel__navigation ul .mobile-dropdown {
+    display: inline-block;
+    margin-right: 3.5rem;
+  }
+}
+@media (max-width: 1530px) {
+  .channel__navigation ul {
+    margin: 1rem 0;
+    justify-content: space-between;
+  }
+  .channel__navigation ul li {
+    margin-right: 0;
+  }
+}
+@media (max-width: 576px) {
+  .channel__navigation ul li a {
+    font-size: 1.4rem;
+  }
+  .channel__navigation ul li:nth-child(1n+5) {
+    display: none;
+  }
+}
+
+.channel__cover {
+  height: 28rem;
+  border-radius: 1.4rem;
+  background-color: #898989;
+  width: calc(100% - 7rem);
+}
+@media (max-width: 1050px) {
+  .channel__cover {
+    height: 14rem;
+    width: calc(100% - 1.8rem);
+  }
+}
+@media (max-width: 838px) {
+  .channel__cover {
+    width: 100%;
+    border-radius: unset;
+  }
+}
+@media (max-width: 576px) {
+  .channel__cover {
+    height: 10rem;
+  }
+}
+
 .channel__content {
   padding: 1rem 7rem 0 0;
 }
-.channel__content .channel__cover {
-  height: 28rem;
-  width: 100%;
-  border-radius: 1.4rem;
-  background-color: #898989;
+@media (max-width: 1530px) {
+  .channel__content {
+    padding-right: 3.2rem;
+  }
+}
+@media (max-width: 1530px) {
+  .channel__content {
+    padding: 1rem 1.8rem 0 1.8rem;
+  }
+}
+@media (max-width: 576px) {
+  .channel__content {
+    position: relative;
+    top: -7.5rem;
+  }
 }
 .channel__content .channel__author-info .channel__author__description {
   padding: 3rem 0 0 0;
   display: flex;
   height: auto;
   width: auto;
-  margin: 0 0 2rem 0;
+  margin: 0 0 1.5rem 0;
+}
+@media (max-width: 576px) {
+  .channel__content .channel__author-info .channel__author__description .author-block img {
+    width: 7rem;
+    height: auto;
+  }
 }
 .channel__content .channel__author-info .channel__author__description .author-block__text {
   padding: 0 0 0 1.4rem;
@@ -247,8 +423,49 @@ header .container .header__user-block .header__user-block__user-profile img {
   flex-direction: column;
   justify-content: center;
 }
+@media (max-width: 576px) {
+  .channel__content .channel__author-info .channel__author__description .author-block__text {
+    padding: 0;
+  }
+  .channel__content .channel__author-info .channel__author__description .author-block__text h2 {
+    font-size: 2rem;
+  }
+  .channel__content .channel__author-info .channel__author__description .author-block__text p {
+    font-size: 1.3rem;
+  }
+}
+@media (max-width: 576px) {
+  .channel__content .channel__author-info .channel__author__description {
+    display: flex;
+    flex-direction: column;
+  }
+}
 .channel__content .channel__author-info .author-content__block {
   margin-bottom: 3rem;
+  /** Recomended channels **/
+}
+@media (max-width: 576px) {
+  .channel__content .channel__author-info .author-content__block {
+    margin-bottom: 0;
+  }
+}
+.channel__content .channel__author-info .author-content__block .author-content {
+  margin: 0 6rem 0 0;
+}
+@media (max-width: 1530px) {
+  .channel__content .channel__author-info .author-content__block .author-content {
+    width: 83rem;
+  }
+}
+@media (max-width: 1050px) {
+  .channel__content .channel__author-info .author-content__block .author-content {
+    margin: 0 3rem 0 0;
+  }
+}
+@media (max-width: 576px) {
+  .channel__content .channel__author-info .author-content__block .author-content {
+    margin: 0;
+  }
 }
 .channel__content .channel__author-info .author-content__block .recommended__channels {
   width: 22rem;
@@ -277,75 +494,11 @@ header .container .header__user-block .header__user-block__user-profile img {
   font-size: 1.8rem;
   color: #19202C;
 }
-.channel__content .channel__author-info .channel__navigation ul {
-  display: flex;
-  text-decoration: none;
-  padding: 0;
-}
-.channel__content .channel__author-info .channel__navigation ul li {
-  height: 2.8rem;
-  display: inline-block;
-  text-decoration: none;
-  margin-right: 5.8rem;
-  font-size: 0;
-}
-.channel__content .channel__author-info .channel__navigation ul li:last-child a {
-  height: 2.7rem;
-  width: 2.9rem;
-}
-.channel__content .channel__author-info .channel__navigation ul li:hover a {
-  color: #FF0000;
-  font-weight: bold;
-  border-bottom: 2px solid #FF0000;
-  border-radius: 2px;
-}
-.channel__content .channel__author-info .channel__navigation ul li:hover a svg > path {
-  fill: #FF0000;
-}
-.channel__content .channel__author-info .channel__navigation ul li a {
-  display: inline-block;
-  text-align: center;
-  font-size: 1.8rem;
-  padding: 0 0.45rem 0.45rem;
-}
-.channel__content .channel__author-info .channel__navigation ul li a::before {
-  display: block;
-  content: attr(title);
-  font-weight: bold;
-  height: 0;
-  overflow: hidden;
-  visibility: hidden;
-}
-.channel__content .channel__author-info .author-current-video__block {
-  padding: 4.4rem 0 0 0;
-  width: 100%;
-}
-.channel__content .channel__author-info .author-current-video__block .current-video__description {
-  padding: 2rem 0 1rem 3.2rem;
-  max-width: 58.2rem;
-}
-.channel__content .channel__author-info .author-current-video__block .current-video__description h1 {
-  margin-bottom: 1rem;
-  max-width: 43rem;
-}
-.channel__content .channel__author-info .author-current-video__block .current-video__description p {
-  margin-bottom: 3rem;
-  line-height: 2.2rem;
-  color: #666666;
-}
-.channel__content .channel__author-info .author-current-video__block .current-video__description .content_data p {
-  margin: 0;
-  font-size: 1.6rem;
-}
-.channel__content .channel__author-info .video-content__navigation {
-  padding: 0;
-  margin: 0 0 0 auto;
-  align-items: center;
-  align-self: flex-start;
-}
-.channel__content .channel__author-info .video-content__navigation .video-content__subscription-stat {
-  margin: 0 0 0 2rem;
-  position: unset;
+@media (max-width: 1530px) {
+  .channel__content .channel__author-info .author-content__block .subscriptions h4 {
+    height: auto;
+    line-height: 1.5;
+  }
 }
 
 /* Font-colors */
@@ -395,7 +548,12 @@ input::placeholder {
 .subscribed-author {
   padding: 2.9rem 0 0 0;
 }
-@media (max-width: 320px) {
+@media (max-width: 1050px) {
+  .subscribed-author {
+    padding: 1.8rem;
+  }
+}
+@media (max-width: 576px) {
   .subscribed-author .channel__info {
     display: none;
   }
@@ -407,13 +565,19 @@ input::placeholder {
   grid-template-columns: repeat(6, 1fr);
   column-gap: 4rem;
 }
-@media (max-width: 320px) {
+@media (max-width: 576px) {
   .subscribed-author .subscribed-author__content {
+    width: 35rem;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
     grid-template-columns: none;
     margin: 0 auto;
+  }
+}
+@media (max-width: 390px) {
+  .subscribed-author .subscribed-author__content {
+    width: 28.8rem;
   }
 }
 
@@ -461,7 +625,7 @@ input::placeholder {
   line-height: 2.2rem;
 }
 
-@media (max-width: 320px) {
+@media (max-width: 390px) {
   .recommended {
     display: none;
   }
@@ -478,7 +642,7 @@ input::placeholder {
   column-gap: 4rem;
 }
 
-@media (max-width: 320px) {
+@media (max-width: 390px) {
   .recommended__channels {
     display: none;
   }
@@ -491,8 +655,14 @@ input::placeholder {
   column-gap: 4rem;
 }
 
+@media (max-width: 1050px) {
+  .subscriptions.recommended__channels {
+    display: none;
+  }
+}
+
 main {
-  overflow: auto;
+  overflow: hidden;
   padding-top: 8.4rem;
 }
 
@@ -543,7 +713,7 @@ input::placeholder {
 .nav-menu {
   padding: 0 0 6rem 3.3rem;
 }
-@media (max-width: 320px) {
+@media (max-width: 838px) {
   .nav-menu {
     display: flex;
     padding: 0;
@@ -581,7 +751,7 @@ input::placeholder {
 .nav-menu a:hover div, .nav-menu a:active div {
   color: inherit;
 }
-@media (max-width: 320px) {
+@media (max-width: 838px) {
   .nav-menu a {
     flex-direction: column;
     margin: 0;
@@ -606,7 +776,7 @@ input::placeholder {
   position: absolute;
   bottom: 0;
 }
-@media (max-width: 320px) {
+@media (max-width: 838px) {
   .settings {
     display: none;
   }
@@ -662,7 +832,7 @@ input::placeholder {
 .subscriptions {
   padding: 0 0 6rem 3.3rem;
 }
-@media (max-width: 320px) {
+@media (max-width: 390px) {
   .subscriptions {
     display: none;
   }
@@ -684,6 +854,11 @@ input::placeholder {
 }
 .subscriptions .subscriptions__list .subscriptions__link .subscriptions__link__text {
   color: #898989;
+}
+@media (max-width: 1200px) {
+  .subscriptions .subscriptions__list .subscriptions__link .subscriptions__link__text {
+    line-height: 1.5;
+  }
 }
 
 /*# sourceMappingURL=blocks.css.map */
