--- a/assets/css/assets/blocks/main_channel-page/main_channel-page.css
+++ b/assets/css/assets/blocks/main_channel-page/main_channel-page.css
@@ -2,21 +2,194 @@
 /* Search-form */
 /* Links */
 /* Borders */
+/* Font-colors */
+/* Search-form */
+/* Links */
+/* Borders */
+.author-current-video__block {
+  padding: 4.4rem 0 0 0;
+  width: 100%;
+}
+@media (max-width: 1530px) {
+  .author-current-video__block {
+    flex-direction: column;
+    margin: 0;
+  }
+}
+@media (max-width: 576px) {
+  .author-current-video__block {
+    display: none;
+  }
+}
+@media (max-width: 1050px) {
+  .author-current-video__block .content__tab > .video-content {
+    margin: 0 auto;
+  }
+}
+.author-current-video__block .current-video__description {
+  margin: 0 3.2rem;
+  padding: 2rem 0 1rem 0;
+  max-width: 58.2rem;
+}
+@media (max-width: 1530px) {
+  .author-current-video__block .current-video__description {
+    margin: 0;
+  }
+  .author-current-video__block .current-video__description h1 {
+    max-width: 54rem;
+  }
+}
+@media (max-width: 1050px) {
+  .author-current-video__block .current-video__description {
+    margin: 0 auto;
+    padding: 2rem 2.1rem 1rem;
+  }
+}
+.author-current-video__block .current-video__description h1 {
+  margin-bottom: 1rem;
+  max-width: 43rem;
+}
+.author-current-video__block .current-video__description p {
+  margin-bottom: 3rem;
+  line-height: 2.2rem;
+  color: #666666;
+}
+.author-current-video__block .current-video__description .content_data p {
+  margin: 0;
+  font-size: 1.6rem;
+}
+
+/* Font-colors */
+/* Search-form */
+/* Links */
+/* Borders */
+@media (max-width: 576px) {
+  .channel__navigation {
+    margin: 0;
+  }
+}
+.channel__navigation ul {
+  display: flex;
+  text-decoration: none;
+  padding: 0;
+}
+.channel__navigation ul li {
+  height: 2.8rem;
+  display: inline-block;
+  text-decoration: none;
+  margin-right: 5.8rem;
+  font-size: 0;
+}
+.channel__navigation ul li:last-child a {
+  height: 2.7rem;
+  width: 2.9rem;
+}
+.channel__navigation ul li:hover a {
+  color: #FF0000;
+  font-weight: bold;
+  border-bottom: 2px solid #FF0000;
+  border-radius: 2px;
+}
+.channel__navigation ul li:hover a svg > path {
+  fill: #FF0000;
+}
+.channel__navigation ul li a {
+  display: inline-block;
+  text-align: center;
+  font-size: 1.8rem;
+  padding: 0 0.45rem 0.45rem;
+  color: #000000;
+}
+.channel__navigation ul li a::before {
+  display: block;
+  content: attr(title);
+  font-weight: bold;
+  height: 0;
+  overflow: hidden;
+  visibility: hidden;
+}
+.channel__navigation ul .mobile-dropdown {
+  display: none;
+}
+@media (max-width: 576px) {
+  .channel__navigation ul .mobile-dropdown {
+    display: inline-block;
+    margin-right: 3.5rem;
+  }
+}
+@media (max-width: 1530px) {
+  .channel__navigation ul {
+    margin: 1rem 0;
+    justify-content: space-between;
+  }
+  .channel__navigation ul li {
+    margin-right: 0;
+  }
+}
+@media (max-width: 576px) {
+  .channel__navigation ul li a {
+    font-size: 1.4rem;
+  }
+  .channel__navigation ul li:nth-child(1n+5) {
+    display: none;
+  }
+}
+
+.channel__cover {
+  height: 28rem;
+  border-radius: 1.4rem;
+  background-color: #898989;
+  width: calc(100% - 7rem);
+}
+@media (max-width: 1050px) {
+  .channel__cover {
+    height: 14rem;
+    width: calc(100% - 1.8rem);
+  }
+}
+@media (max-width: 838px) {
+  .channel__cover {
+    width: 100%;
+    border-radius: unset;
+  }
+}
+@media (max-width: 576px) {
+  .channel__cover {
+    height: 10rem;
+  }
+}
+
 .channel__content {
   padding: 1rem 7rem 0 0;
 }
-.channel__content .channel__cover {
-  height: 28rem;
-  width: 100%;
-  border-radius: 1.4rem;
-  background-color: #898989;
+@media (max-width: 1530px) {
+  .channel__content {
+    padding-right: 3.2rem;
+  }
+}
+@media (max-width: 1530px) {
+  .channel__content {
+    padding: 1rem 1.8rem 0 1.8rem;
+  }
+}
+@media (max-width: 576px) {
+  .channel__content {
+    position: relative;
+    top: -7.5rem;
+  }
 }
 .channel__content .channel__author-info .channel__author__description {
   padding: 3rem 0 0 0;
   display: flex;
   height: auto;
   width: auto;
-  margin: 0 0 2rem 0;
+  margin: 0 0 1.5rem 0;
+}
+@media (max-width: 576px) {
+  .channel__content .channel__author-info .channel__author__description .author-block img {
+    width: 7rem;
+    height: auto;
+  }
 }
 .channel__content .channel__author-info .channel__author__description .author-block__text {
   padding: 0 0 0 1.4rem;
@@ -24,8 +197,49 @@
   flex-direction: column;
   justify-content: center;
 }
+@media (max-width: 576px) {
+  .channel__content .channel__author-info .channel__author__description .author-block__text {
+    padding: 0;
+  }
+  .channel__content .channel__author-info .channel__author__description .author-block__text h2 {
+    font-size: 2rem;
+  }
+  .channel__content .channel__author-info .channel__author__description .author-block__text p {
+    font-size: 1.3rem;
+  }
+}
+@media (max-width: 576px) {
+  .channel__content .channel__author-info .channel__author__description {
+    display: flex;
+    flex-direction: column;
+  }
+}
 .channel__content .channel__author-info .author-content__block {
   margin-bottom: 3rem;
+  /** Recomended channels **/
+}
+@media (max-width: 576px) {
+  .channel__content .channel__author-info .author-content__block {
+    margin-bottom: 0;
+  }
+}
+.channel__content .channel__author-info .author-content__block .author-content {
+  margin: 0 6rem 0 0;
+}
+@media (max-width: 1530px) {
+  .channel__content .channel__author-info .author-content__block .author-content {
+    width: 83rem;
+  }
+}
+@media (max-width: 1050px) {
+  .channel__content .channel__author-info .author-content__block .author-content {
+    margin: 0 3rem 0 0;
+  }
+}
+@media (max-width: 576px) {
+  .channel__content .channel__author-info .author-content__block .author-content {
+    margin: 0;
+  }
 }
 .channel__content .channel__author-info .author-content__block .recommended__channels {
   width: 22rem;
@@ -54,75 +268,11 @@
   font-size: 1.8rem;
   color: #19202C;
 }
-.channel__content .channel__author-info .channel__navigation ul {
-  display: flex;
-  text-decoration: none;
-  padding: 0;
-}
-.channel__content .channel__author-info .channel__navigation ul li {
-  height: 2.8rem;
-  display: inline-block;
-  text-decoration: none;
-  margin-right: 5.8rem;
-  font-size: 0;
-}
-.channel__content .channel__author-info .channel__navigation ul li:last-child a {
-  height: 2.7rem;
-  width: 2.9rem;
-}
-.channel__content .channel__author-info .channel__navigation ul li:hover a {
-  color: #FF0000;
-  font-weight: bold;
-  border-bottom: 2px solid #FF0000;
-  border-radius: 2px;
-}
-.channel__content .channel__author-info .channel__navigation ul li:hover a svg > path {
-  fill: #FF0000;
-}
-.channel__content .channel__author-info .channel__navigation ul li a {
-  display: inline-block;
-  text-align: center;
-  font-size: 1.8rem;
-  padding: 0 0.45rem 0.45rem;
-}
-.channel__content .channel__author-info .channel__navigation ul li a::before {
-  display: block;
-  content: attr(title);
-  font-weight: bold;
-  height: 0;
-  overflow: hidden;
-  visibility: hidden;
-}
-.channel__content .channel__author-info .author-current-video__block {
-  padding: 4.4rem 0 0 0;
-  width: 100%;
-}
-.channel__content .channel__author-info .author-current-video__block .current-video__description {
-  padding: 2rem 0 1rem 3.2rem;
-  max-width: 58.2rem;
-}
-.channel__content .channel__author-info .author-current-video__block .current-video__description h1 {
-  margin-bottom: 1rem;
-  max-width: 43rem;
-}
-.channel__content .channel__author-info .author-current-video__block .current-video__description p {
-  margin-bottom: 3rem;
-  line-height: 2.2rem;
-  color: #666666;
-}
-.channel__content .channel__author-info .author-current-video__block .current-video__description .content_data p {
-  margin: 0;
-  font-size: 1.6rem;
-}
-.channel__content .channel__author-info .video-content__navigation {
-  padding: 0;
-  margin: 0 0 0 auto;
-  align-items: center;
-  align-self: flex-start;
-}
-.channel__content .channel__author-info .video-content__navigation .video-content__subscription-stat {
-  margin: 0 0 0 2rem;
-  position: unset;
+@media (max-width: 1530px) {
+  .channel__content .channel__author-info .author-content__block .subscriptions h4 {
+    height: auto;
+    line-height: 1.5;
+  }
 }
 
 /*# sourceMappingURL=main_channel-page.css.map */
