--- a/assets/css/assets/blocks/main_home-page/subscribed-author/subscribed-author.css
+++ b/assets/css/assets/blocks/main_home-page/subscribed-author/subscribed-author.css
@@ -46,7 +46,12 @@ input::placeholder {
 .subscribed-author {
   padding: 2.9rem 0 0 0;
 }
-@media (max-width: 320px) {
+@media (max-width: 1050px) {
+  .subscribed-author {
+    padding: 1.8rem;
+  }
+}
+@media (max-width: 576px) {
   .subscribed-author .channel__info {
     display: none;
   }
@@ -58,13 +63,19 @@ input::placeholder {
   grid-template-columns: repeat(6, 1fr);
   column-gap: 4rem;
 }
-@media (max-width: 320px) {
+@media (max-width: 576px) {
   .subscribed-author .subscribed-author__content {
+    width: 35rem;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
     grid-template-columns: none;
     margin: 0 auto;
+  }
+}
+@media (max-width: 390px) {
+  .subscribed-author .subscribed-author__content {
+    width: 28.8rem;
   }
 }
 
