--- a/assets/css/assets/blocks/subscriptions/subscriptions.css
+++ b/assets/css/assets/blocks/subscriptions/subscriptions.css
@@ -46,7 +46,7 @@ input::placeholder {
 .subscriptions {
   padding: 0 0 6rem 3.3rem;
 }
-@media (max-width: 320px) {
+@media (max-width: 390px) {
   .subscriptions {
     display: none;
   }
@@ -68,6 +68,11 @@ input::placeholder {
 }
 .subscriptions .subscriptions__list .subscriptions__link .subscriptions__link__text {
   color: #898989;
+}
+@media (max-width: 1200px) {
+  .subscriptions .subscriptions__list .subscriptions__link .subscriptions__link__text {
+    line-height: 1.5;
+  }
 }
 
 /*# sourceMappingURL=subscriptions.css.map */
