--- a/assets/css/assets/global/blocks/content_tab.css
+++ b/assets/css/assets/global/blocks/content_tab.css
@@ -3,10 +3,15 @@
   display: inline-block;
   cursor: pointer;
 }
-@media (max-width: 320px) {
+@media (max-width: 576px) {
+  .content__tab {
+    width: 35rem;
+    margin: 0 auto 3rem;
+  }
+}
+@media (max-width: 390px) {
   .content__tab {
     width: 28.8rem;
-    margin: 0 auto 3rem;
   }
 }
 .content__tab .video_medium {
@@ -17,10 +22,28 @@
   width: 25rem;
   height: 15rem;
 }
+@media (max-width: 576px) {
+  .content__tab .video_small {
+    width: 35rem;
+    height: auto;
+  }
+}
+@media (max-width: 390px) {
+  .content__tab .video_small {
+    width: 28.8rem;
+  }
+}
 .content__tab .video-content {
   border-radius: 1.4rem;
   background-color: rgba(0, 0, 0, 0.07);
   position: relative;
+}
+.content__tab .video-content video {
+  aspect-ratio: 16/9;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  object-fit: cover;
 }
 @media (max-width: 320px) {
   .content__tab .video-content {
@@ -28,9 +51,8 @@
   }
 }
 .content__tab .video-content .video-time {
-  width: 4.7rem;
-  height: 2.4rem;
-  background-color: rgba(0, 0, 0, 0.1);
+  padding: 0.25rem 0.9rem;
+  background-color: rgba(0, 0, 0, 0.3);
   border-radius: 1.2rem;
   position: absolute;
   bottom: 1rem;
@@ -53,6 +75,11 @@
 .content__tab .content-info span {
   padding: 0.4rem 0 0 0;
   font-size: 1.3rem;
+}
+@media (max-width: 390px) {
+  .content__tab .content-info {
+    max-width: 28.8rem;
+  }
 }
 
 .content_data {
