--- a/assets/css/assets/global/global.css
+++ b/assets/css/assets/global/global.css
@@ -13,6 +13,12 @@
 .content__section {
   margin: 0 0 5rem 0;
 }
+@media (max-width: 576px) {
+  .content__section {
+    position: relative;
+    top: -9rem;
+  }
+}
 
 .channel__info {
   display: flex;
@@ -39,10 +45,15 @@
   display: inline-block;
   cursor: pointer;
 }
-@media (max-width: 320px) {
+@media (max-width: 576px) {
+  .content__tab {
+    width: 35rem;
+    margin: 0 auto 3rem;
+  }
+}
+@media (max-width: 390px) {
   .content__tab {
     width: 28.8rem;
-    margin: 0 auto 3rem;
   }
 }
 .content__tab .video_medium {
@@ -53,10 +64,28 @@
   width: 25rem;
   height: 15rem;
 }
+@media (max-width: 576px) {
+  .content__tab .video_small {
+    width: 35rem;
+    height: auto;
+  }
+}
+@media (max-width: 390px) {
+  .content__tab .video_small {
+    width: 28.8rem;
+  }
+}
 .content__tab .video-content {
   border-radius: 1.4rem;
   background-color: rgba(0, 0, 0, 0.07);
   position: relative;
+}
+.content__tab .video-content video {
+  aspect-ratio: 16/9;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  object-fit: cover;
 }
 @media (max-width: 320px) {
   .content__tab .video-content {
@@ -64,9 +93,8 @@
   }
 }
 .content__tab .video-content .video-time {
-  width: 4.7rem;
-  height: 2.4rem;
-  background-color: rgba(0, 0, 0, 0.1);
+  padding: 0.25rem 0.9rem;
+  background-color: rgba(0, 0, 0, 0.3);
   border-radius: 1.2rem;
   position: absolute;
   bottom: 1rem;
@@ -89,6 +117,11 @@
 .content__tab .content-info span {
   padding: 0.4rem 0 0 0;
   font-size: 1.3rem;
+}
+@media (max-width: 390px) {
+  .content__tab .content-info {
+    max-width: 28.8rem;
+  }
 }
 
 .content_data {
@@ -119,6 +152,11 @@
   align-items: end;
   position: relative;
 }
+@media (max-width: 1200px) {
+  .video-content__navigation {
+    padding: 0;
+  }
+}
 .video-content__navigation .video-content__subscription-stat {
   line-height: 1.5;
   padding: 0.5rem 2rem;
@@ -129,6 +167,11 @@
   position: relative;
   bottom: -0.5rem;
 }
+@media (max-width: 576px) {
+  .video-content__navigation .video-content__subscription-stat {
+    font-size: 1.2rem;
+  }
+}
 .video-content__navigation .move-left, .video-content__navigation .move-right {
   padding: 0.8rem;
   width: 2.8rem;
@@ -136,6 +179,45 @@
   border-radius: 50%;
   background-color: #c2c2c2;
   margin-right: 1rem;
+}
+
+.channel__author__description .video-content__navigation {
+  display: flex;
+  align-self: center;
+  justify-self: end;
+  padding: unset;
+  margin-left: auto;
+}
+@media (max-width: 1530px) {
+  .channel__author__description .video-content__navigation {
+    padding: 0 5.2rem 0 0;
+  }
+}
+@media (max-width: 1050px) {
+  .channel__author__description .video-content__navigation {
+    padding: 0;
+  }
+}
+@media (max-width: 576px) {
+  .channel__author__description .video-content__navigation {
+    margin: 2rem auto 0 0;
+  }
+}
+.channel__author__description .video-content__navigation p {
+  margin: 0;
+}
+.channel__author__description .video-content__navigation img {
+  display: flex;
+  align-self: center;
+  margin: 0 2rem 0 0;
+}
+@media (max-width: 1050px) {
+  .channel__author__description .video-content__navigation img {
+    display: none;
+  }
+}
+.channel__author__description .video-content__navigation .video-content__subscription-stat {
+  position: unset;
 }
 
 /*/*/
