--- a/assets/scss/assets/blocks/header/header.scss
+++ b/assets/scss/assets/blocks/header/header.scss
@@ -9,7 +9,7 @@ header {
   height: 8.4rem;
   width: 100%;
 
-  @media (max-width: $xs) {
+  @media (max-width: $sm) {
     padding: 0 1.2rem;
     z-index: 100;
     height: inherit;
@@ -22,15 +22,14 @@ header {
     align-items: center;
 
     @media (max-width: $md) {
-      padding: 0 1.6rem;
+      width: 100%;
+      display: flex;
+      align-items: center;
+      padding: 0 1.8rem;
     }
 
     @media (max-width: $sm) {
       height: 5rem;
-      width:28.8rem;
-      padding: 0;
-      display: flex;
-      align-items: center;
     }
 
     .header__burger-menu > div {
@@ -122,6 +121,14 @@ header {
       align-items: center;
       justify-content: space-between;
       margin-left: auto;
+      a:not(:last-child) {
+        &:hover,
+        &:active {
+          img {
+            filter: invert(100%) sepia(84%) saturate(6649%) hue-rotate(6deg) brightness(105%) contrast(117%);
+          }
+        }
+      }
 
       @media (max-width: $md) {
         width: auto;
@@ -161,6 +168,7 @@ header {
           text-align: center;
           padding: 0.25rem;
           font-weight: 800;
+          line-height: 1.2;
         }
       }
       .header__user-block__user-profile {
