--- a/assets/scss/assets/blocks/main_channel-page/main_channel-page.scss
+++ b/assets/scss/assets/blocks/main_channel-page/main_channel-page.scss
@@ -1,30 +1,103 @@
 @import "../../global/breakpoints/breakpoints";
 @import "../../typography/font-colors";
 
+@import "author-current-video";
+@import "channel-navigation";
+
+.channel__cover {
+  height: 28rem;
+  border-radius: 1.4rem;
+  background-color: #898989;
+  width: calc(100% - 7rem);
+
+
+  @media (max-width: $lg) {
+    height: 14rem;
+    width: calc(100% - 1.8rem);
+  }
+  @media (max-width: $md) {
+    width: 100%;
+    border-radius: unset;
+  }
+  @media (max-width: $sm) {
+    height: 10rem;
+  }
+}
+
+
 .channel__content {
   padding: 1rem 7rem 0 0;
-  .channel__cover {
-    height: 28rem;
-    width: 100%;
-    border-radius: 1.4rem;
-    background-color: #898989;
+
+  @media (max-width: $xxll) {
+    padding-right: 3.2rem;
   }
+
+  @media (max-width: $xxll) {
+    padding: 1rem 1.8rem 0 1.8rem;
+  }
+
+  @media (max-width: $sm) {
+    position: relative;
+    top: -7.5rem;
+  }
+
   .channel__author-info {
     .channel__author__description {
       padding: 3rem 0 0 0;
       display: flex;
       height: auto;
       width: auto;
-      margin: 0 0 2rem 0;
+      margin: 0 0 1.5rem 0;
+      .author-block {
+        @media (max-width: $sm) {
+          img {
+            width: 7rem;
+            height: auto;
+          }
+        }
+      }
       .author-block__text{
         padding: 0 0 0 1.4rem;
         display: inline-flex;
         flex-direction: column;
         justify-content: center;
+
+        @media (max-width: $sm) {
+          padding: 0;
+          h2 {
+            font-size: 2rem;
+          }
+          p {
+            font-size: 1.3rem;
+          }
+        }
+      }
+      @media (max-width: $sm) {
+        display: flex;
+        flex-direction: column;
       }
     }
     .author-content__block {
       margin-bottom: 3rem;
+
+      @media (max-width: $sm) {
+        margin-bottom: 0;
+      }
+
+      .author-content {
+        margin: 0 6rem 0 0;
+        @media (max-width: $xxll) {
+          width: 83rem
+        }
+        @media (max-width: $lg) {
+          margin: 0 3rem 0 0;
+        }
+        @media (max-width: $sm) {
+          margin: 0;
+        }
+      }
+
+      /** Recomended channels **/
       .recommended__channels {
         width: 22rem;
         margin-left: auto;
@@ -55,89 +128,16 @@
             }
           }
         }
-      }
-    }
-    .channel__navigation {
 
-      ul {
-        display: flex;
-        text-decoration: none;
-        padding: 0;
+        @media (max-width: $xxll) {
+          h4 {
+            height: auto;
+            line-height: 1.5;
+          }
+        }
 
-        li {
-          height: 2.8rem;
-          display: inline-block;
-          text-decoration: none;
-          margin-right: 5.8rem;
-          font-size: 0;
-          &:last-child {
-            a {
-              height: 2.7rem;
-              width: 2.9rem;
-            }
-          }
-          &:hover {
-            a {
-              color: $font-color__navigation-link_active;
-              font-weight: bold;
-              border-bottom: 2px solid $border-color__active;
-              border-radius: 2px;
-              svg > path {
-                fill: $font-color__navigation-link_active;
-              }
-            }
-          }
-          a {
-            display: inline-block;
-            text-align: center;
-            font-size: 1.8rem;
-            padding: 0 0.45rem 0.45rem;
-            &::before {
-              display: block;
-              content: attr(title);
-              font-weight: bold;
-              height: 0;
-              overflow: hidden;
-              visibility: hidden;
-            }
-          }
-        }
-      }
-
-    }
-    .author-current-video__block {
-      padding: 4.4rem 0 0 0;
-      width: 100%;
-      .current-video__description {
-        padding: 2rem 0 1rem 3.2rem;
-        max-width: calc(55rem + 3.2rem);
-        h1 {
-          margin-bottom: 1rem;
-          max-width: 43rem;
-        }
-        p {
-          margin-bottom: 3rem;
-          line-height: 2.2rem;
-          color: $font-color_main-dark;
-        }
-        .content_data {
-          p {
-            margin: 0;
-            font-size: 1.6rem;
-          }
-        }
-      }
-    }
-    .video-content__navigation {
-      padding: 0;
-      margin: 0 0 0 auto;
-      align-items: center;
-      align-self: flex-start;
-      .video-content__subscription-stat {
-        margin: 0 0 0 2rem;
-        position: unset;
       }
     }
   }
-}
 
+}
