--- a/assets/scss/assets/blocks/blocks.scss
+++ b/assets/scss/assets/blocks/blocks.scss
@@ -3,6 +3,7 @@
 @import "header/header";
 @import "main_channel-page/main_channel-page";
 @import "main_home-page/main_home-page";
+@import "main_video-player/main_video-player-page";
 @import "nav/nav";
 @import "settings/settings";
 @import "subscriptions/subscriptions";
